fixed CSS spacing

--- a/Where_In_The_World_FrontEnd/src/index.css
+++ b/Where_In_The_World_FrontEnd/src/index.css
@@ -1,38 +1,22 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(0, 0, 0, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-body {
-  padding: 0;
-  margin: 0;
-}
-
-.header {
-  width: 100%;
+#root {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  background-color: beige;
-  padding: 0;
-  margin: 0;
+  height: 100vh;
 }
 
-.footer {
-  width: 100%;
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.mainScreen {
+  flex-grow: 1;
   display: flex;
-  background-color: beige;
-  padding: 1rem;
-  position: absolute;
-  bottom: 0;
+  flex-direction: column;
+}
+
+footer {
+  flex-shrink: 0;
 }
